Fix issues with maps on smaller screens

--- a/components/base.scss
+++ b/components/base.scss
@@ -220,6 +220,7 @@
 /* STAC Collections and Items */
 .vue-component.stac .map {
 	background: transparent;
+	height: 350px;
 }
 .vue-component.stac .tabular {
 	margin: 0.5em 0;
